fixed 100vh problem on iOS safari

--- a/src/components/ArtistCard/ArtistCard.css
+++ b/src/components/ArtistCard/ArtistCard.css
@@ -1,9 +1,9 @@
 .artist-card { 
-    background: #fcfcfc;
+    background: black;
     position: relative;
-    min-width: 200px;
+    min-width: 250px;
     width: 20vw;
-    max-width: 250px;
+    max-width: 280px;
     border-radius: 20px;
     margin: 0 auto;
     box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
@@ -46,22 +46,22 @@
 .artist-locale-container {
     position: relative;
     margin: 0 auto;
-    background: black;
+    background: white;
     width: 100%;
     text-align: center;
     opacity: 0.92;
     height: auto;
+    color: black;
 }
 .artist-locale-container h1 {
-    color: white;
-    font-size: 1em;
+    font-size: 0.75em;
     margin: 0 auto;
     padding: 0.22em 0;
 
 }
 .artist-popularity-container h1 {
     color: white;
-    font-size: 1.5em;
+    font-size: 1.44em;
 }
 
 .artist-popularity-container i {
@@ -73,6 +73,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: white;
 }
 .artist-card-header .artist-name{
     font-size: 1.5em;
@@ -85,6 +86,7 @@
     margin: 0 auto;
     padding: 0.5em;
     text-transform: capitalize;
+
 }
 
 .artist-img-wrapper {
